korundum (4:4.11.3-2) UNRELEASED; urgency=low

  * Build against default Ruby version (Closes: #723634).
  * Add myself to uploaders.
  * Bump Standards-Version to 3.9.5 (no changes needed).

 -- Cédric Boutillier <boutil@debian.org>  Tue, 03 Dec 2013 07:50:02 +0100

korundum (4:4.11.3-1) unstable; urgency=low

  * New upstream release.
  * Update build dependencies.

 -- Maximiliano Curia <maxy@debian.org>  Sat, 09 Nov 2013 19:28:42 +0100

korundum (4:4.11.2-1) experimental; urgency=low

  * New upstream release.
  * Update build-dependencies.

 -- Maximiliano Curia <maxy@debian.org>  Wed, 09 Oct 2013 16:25:02 +0200

korundum (4:4.10.5-1) unstable; urgency=low

  * New upstream release.

 -- Maximiliano Curia <maxy@debian.org>  Fri, 12 Jul 2013 17:52:33 +0200

korundum (4:4.10.4-2) experimental; urgency=low

  * New patch: rbkconfig_compiler_mayhem_fix.patch
    fix for http://www.forallsecure.com/bug-
    reports/c83a9d5bc92bafac366256af920d7da056febe26/

 -- Maximiliano Curia <maxy@debian.org>  Sat, 15 Jun 2013 09:22:16 +0200

korundum (4:4.10.4-1) experimental; urgency=low

  * New upstream release.

  [ Daniele E. Domenichelli ]
  * Bump okular-dev build dependency to >= 4:4.10.

  [ Maximiliano Curia ]
  * Bump Standards-Version to 3.9.4.
  * Update vcs fields.
  * Add myself to uploaders.

 -- Maximiliano Curia <maxy@debian.org>  Fri, 14 Jun 2013 18:19:15 +0200

korundum (4:4.10.2-1) experimental; urgency=low

  [ Diane Trout ]
  * New upstream release. 
  * Bump the smoke-dev-tools, libsmokeqt4-dev libsmokekde-dev and
    libqtruby4shared-dev build dependencies to >= 4:4.10.

 -- Sune Vuorela <sune@debian.org>  Mon, 08 Apr 2013 19:38:46 +0000

korundum (4:4.8.4-1) unstable; urgency=low

  * New upstream release.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 02 Mar 2012 15:31:10 -0500

korundum (4:4.7.4-1) unstable; urgency=low

  * Team upload.
  * New upstream release.
  * Bump Standards-Version to 3.9.3, no changes required.