@@ -1,2 +1,2 @@
-usr/lib/ruby/1.8/*/akonadi.so
-usr/lib/ruby/1.8/akonadi/akonadi.rb
+usr/lib/ruby/vendor_ruby/*/*/akonadi.so
+usr/lib/ruby/vendor_ruby/*/akonadi/akonadi.rb
